--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -31,39 +31,11 @@
 				<label wicket:id="scalarName"
 					class="scalarName col-form-label">[Label text]</label> 
 				<span class="scalarValueWrapper">
-				
 					<div class="scalarPlaceholder">
 					
-						<label wicket:id="debugLabel" style="font-size: x-small; color: burlywood;">[Debug text]</label>
-					
-						<span class="scalarValueInput"> 
-							<span class="editing">
-
-								<a wicket:id="scalarValueInlinePromptLink"
-									href="##" name="scalarValueInlinePromptLink"
-									class="scalarValueInlinePromptLink">
-									
-									<span style="color: blue;">λ</span>
-									<!-- output format --> 
-									<wicket:container 
-										wicket:id="container-scalarValue-outputFormat"/> 
-										 
-								</a> 
-							
-								<!-- input format (when editing or action dialog or read-only) -->
-								<div>
-									<span style="color: purple;">α</span>
-									<wicket:container 
-										wicket:id="container-scalarValue-inputFormat" />
-								</div>
-								
-								<a wicket:id="editProperty"
-									href="##" class="edit btn btn-sm btn-link"> 
-									<span class="editIcon fa fa-edit"/>
-								</a>
-										  
-							</span>
-						</span> 
+						<wicket:container 
+							wicket:id="container-fieldFrame" />
+						
 						<span wicket:id="associatedActionLinksRight"
 							class="associatedActionLinksRight">[drop down]</span>
 					</div> 
@@ -86,6 +58,82 @@
 				wicket:id="scalarIfCompact"/>
 				  
 		</div>
+
+		<!-- FIELD FRAME FRAGMENTS -->
+
+		<wicket:fragment wicket:id="fragment-fieldFrame-withLink">
+			<label wicket:id="debugLabel" style="font-size: x-small; color: burlywood;">[Debug text]</label>
+			<span class="scalarValueInput">
+				<span class="editing">
+				
+					<a wicket:id="scalarValueInlinePromptLink"
+						href="##" name="scalarValueInlinePromptLink"
+						class="scalarValueInlinePromptLink">
+						
+						<span style="color: blue;">λ</span>
+						<!-- output format --> 
+						<wicket:container 
+							wicket:id="container-scalarValue-outputFormat"/> 
+							 
+					</a> 
+					
+					<a wicket:id="editProperty"
+						href="##" class="edit btn btn-sm btn-link"> 
+						<span class="editIcon fa fa-edit"/>
+					</a>
+							  
+				</span>
+			</span> 
+		</wicket:fragment>
+		
+		<wicket:fragment wicket:id="fragment-fieldFrame-withoutLink">
+			<label wicket:id="debugLabel" style="font-size: x-small; color: burlywood;">[Debug text]</label>
+			<span class="scalarValueInput">
+				<span class="editing">
+				
+					<!-- input format (when editing or action dialog or read-only) -->
+					<div>
+						<span style="color: purple;">α</span>
+						<wicket:container 
+							wicket:id="container-scalarValue-inputFormat" />
+					</div>
+							  
+				</span>
+			</span> 
+		</wicket:fragment>
+		
+
+		<wicket:fragment wicket:id="fragment-fieldFrame-unified">
+			<label wicket:id="debugLabel" style="font-size: x-small; color: burlywood;">[Debug text]</label>
+			<span class="scalarValueInput">
+				<span class="editing">
+				
+					<a wicket:id="scalarValueInlinePromptLink"
+						href="##" name="scalarValueInlinePromptLink"
+						class="scalarValueInlinePromptLink">
+						
+						<span style="color: blue;">λ</span>
+						<!-- output format --> 
+						<wicket:container 
+							wicket:id="container-scalarValue-outputFormat"/> 
+							 
+					</a> 
+				
+					<!-- input format (when editing or action dialog or read-only) -->
+					<div>
+						<span style="color: purple;">α</span>
+						<wicket:container 
+							wicket:id="container-scalarValue-inputFormat" />
+					</div>
+					
+					<a wicket:id="editProperty"
+						href="##" class="edit btn btn-sm btn-link"> 
+						<span class="editIcon fa fa-edit"/>
+					</a>
+							  
+				</span>
+			</span> 
+		</wicket:fragment>
 
 		<!-- INPUT FRAGMENTS -->
 
