--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/primitive/BooleanPanel_labelRightPosition.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/primitive/BooleanPanel_labelRightPosition.html
@@ -54,7 +54,7 @@
                                    name="scalarValueInlinePromptLink"
                                    class="form-control form-control-sm scalarValueInlinePromptLink"
                                    wicket:id="scalarValueInlinePromptLink">
-                                    <span wicket:id="container-scalarValue-outputFormat"></span>
+                                    <span wicket:id="container-scalarValue-outputFormat"/>
                                 </a>
 
                                 </span>
