--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/valuechoices/ValueChoicesSelect2Panel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/valuechoices/ValueChoicesSelect2Panel.html
@@ -44,7 +44,7 @@
                                        name="scalarValueInlinePromptLink"
                                        class="form-control form-control-sm scalarValueInlinePromptLink"
                                        wicket:id="scalarValueInlinePromptLink">
-                                        <span wicket:id="container-scalarValue-outputFormat"></span>
+                                        <span wicket:id="container-scalarValue-outputFormat"/>
                                     </a>
 
                                     <select class="choices form-control-sm select2-remote" wicket:id="scalarValue"></select>
