ISIS-2877: replace inline prompt link's <a> tag with <div> tag

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -66,8 +66,7 @@
 			<span class="scalarValueInput">
 				<span class="editing">
 				
-					<a wicket:id="scalarValueInlinePromptLink"
-						href="##" name="scalarValueInlinePromptLink"
+					<div wicket:id="scalarValueInlinePromptLink"
 						class="scalarValueInlinePromptLink">
 						
 						<span style="color: blue;">λ</span>
@@ -75,7 +74,7 @@
 						<wicket:container 
 							wicket:id="container-scalarValue"/> 
 							 
-					</a> 
+					</div> 
 					
 					<a wicket:id="editProperty"
 						href="##" class="edit btn btn-sm btn-link"> 
