ISIS-2877: basing ReferencePanel and ValueChoicesSelect2Panel on ScalarPanelFormFieldAbstract
- which already has all the field editing logic
- prepare purging of custom panel markup templates

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/entity/icontitle/EntityIconAndTitlePanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/entity/icontitle/EntityIconAndTitlePanel.html
@@ -21,11 +21,11 @@
     <body>
         <wicket:panel>
              <span wicket:id="entityLinkWrapper" class="entityIconAndTitlePanel entityIconAndTitleComponentType">
-                 <a href="#" wicket:id="entityLink" class="entityUrlSource">
+                 <div wicket:id="entityLink" class="entityUrlSource">
                      <span wicket:id="entityFontAwesome"></span>
                      <img wicket:id="entityImage" class="entityImage"/>
                      <span wicket:id="entityTitle" class="entityTitle">[title]</span>
-                 </a>
+                 </div>
                  <wicket:child/>
             </span>
         </wicket:panel>
