--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -141,8 +141,8 @@
 		
 		<wicket:fragment wicket:id="fragment-input-select2">
            <span class="autoCompletePlaceholder">
+<!--                <span wicket:id="entityIconAndTitle">[icon and title]</span> -->
                <span wicket:id="entityLink">link or drop down</span>
-               <span wicket:id="entityIconAndTitle">[icon and title]</span>
            </span>
            <span wicket:id="entityTitleIfNull">(none)</span>
 		</wicket:fragment>
