ISIS-2877: css: entityUrlSource pointer fix

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -1041,6 +1041,10 @@ div.scalarValueInlinePromptLink.form-control:hover {
 	background-color: rgba(0, 0, 0, 0.08);
 }
 
+.entityUrlSource {
+	cursor: pointer;
+}
+
 
 .booleanPanel div.label-left .scalarValueWrapper .form-control.scalarValueInlinePromptLink,
 .referencePanel div.label-left .scalarValueWrapper .form-control.scalarValueInlinePromptLink {
