ISIS-2877: css: less prominent badges for enums

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -201,7 +201,7 @@
 		</wicket:fragment>
 		
 		<wicket:fragment wicket:id="fragment-compact-badge">
-			<div class="badge bg-info">
+			<div class="badge bg-light">
 				<span wicket:id="scalarValue"></span>	
 			</div>
 		</wicket:fragment>
