--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -46,12 +46,8 @@
 			</div>
 
 			<!-- prompt form frame -->
-			<div wicket:id="scalarIfRegularInlinePromptForm"
-				class="inlinePromptForm">
-				<div>
-					<span>[inline edit form]</span>
-				</div>
-			</div>
+			<wicket:container wicket:id="scalarIfRegularInlinePromptForm"
+				class="inlinePromptForm" />
 
 			<!-- compact frame -->
 			<wicket:container 
