ISIS-2877: css fixes

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -517,8 +517,8 @@ span.containedButtonPanel {
 }
 
 /* add some space between an FA icon and the text on the right */
-.btn .additionalLinkItem {
-	margin-left: 3px;
+.additionalLinkItem .fa {
+	margin-right: 2px;
 }
 
 /* from additionalLinksPanel.css */
