ISIS-2877: revert breaking template change

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -46,8 +46,12 @@
 			</div>
 
 			<!-- prompt form frame -->
-			<wicket:container wicket:id="scalarIfRegularInlinePromptForm"
-				class="inlinePromptForm" />
+			<div wicket:id="scalarIfRegularInlinePromptForm"
+				class="inlinePromptForm">
+				<div>
+					<span>[inline edit form]</span>
+				</div>
+			</div>
 
 			<!-- compact frame -->
 			<wicket:container 
