--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -41,7 +41,6 @@ body {
 .card {
 	margin-bottom: 21px;
 }
-
 .card .card-header {
 	padding: 3px 15px;
 	display: flex;
@@ -49,9 +48,24 @@ body {
 	justify-content: space-between;
 	min-height: 3em; /* for card-headers that contain no buttons, to make them same height */
 }
-
 .card .card-header .card-title {
 	margin-bottom: 0rem;
+}
+
+.card .mini-card {
+  font-size: 0.7rem;
+}
+.card .mini-card h5 {
+  font-size: 0.8rem;
+}
+.card .mini-card h6 {
+  font-size: 0.7rem;
+}
+.card .mini-card .card-header,
+.card .mini-card .card-body,
+.card .mini-card .card-footer {
+  padding: 0.2rem 0.4rem;
+  min-height: inherit;
 }
 
 .table .form-control:disabled {
