ISIS-2877: css fixes: icon&title + breadcrumbs

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -1057,6 +1057,8 @@ div.scalarValueInlinePromptLink.form-control:hover {
 
 .entityUrlSource {
 	cursor: pointer;
+	white-space: nowrap;
+	display: inline;
 }
 
 
