--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/blobclob/_IsisBlobOrClobPanelAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/blobclob/_IsisBlobOrClobPanelAbstract.html
@@ -37,7 +37,8 @@
                             <span class="scalarValueInput">
                                 <span class="editing">
 
-                                    <img class="scalarImage text-center" width="200px" wicket:id="scalarImage"/>
+                                    <img wicket:id="scalarImage" 
+                                    	class="scalarImage text-center" width="200px"/>
                                     <span class="scalarValue text-right">
 
                                         <span class="uploadFile form-text">
