ISIS-2877: fixes client-side event-bubbling
- when link is contained within a component, that has already a click
event handler

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -194,7 +194,7 @@
 		</wicket:fragment>
 		
 		<wicket:fragment wicket:id="fragment-compact-link">
-			<a wicket:id="scalarValue" class="link-primary">
+			<a wicket:id="scalarValue" class="no-click-bubbling link-primary">
 				<span wicket:id="linkLabel" />
 			</a>
 		</wicket:fragment>
