--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -67,12 +67,10 @@
 				
 					<div wicket:id="scalarValueInlinePromptLink"
 						class="scalarValueInlinePromptLink">
-						<div class="no-click-bubbling">
-							<!-- output format -->
-							<wicket:container 
-								wicket:id="container-scalarValue"
-								class="no-event-prop" /> 
-						</div>
+						<!-- output format -->
+						<wicket:container 
+							wicket:id="container-scalarValue"
+							class="no-event-prop" /> 
 					</div> 
 					
 					<a wicket:id="editProperty"
@@ -197,7 +195,7 @@
 		</wicket:fragment>
 		
 		<wicket:fragment wicket:id="fragment-compact-link">
-			<a wicket:id="scalarValue" class="link-primary">
+			<a wicket:id="scalarValue" class="no-click-bubbling link-primary">
 				<span wicket:id="linkLabel" />
 			</a>
 		</wicket:fragment>
