ISIS-2877: edit-prompt-link button-group: show only on hover

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -1054,6 +1054,12 @@ div.scalarValueInlinePromptLink.form-control:hover {
 	cursor: pointer;
 	background-color: rgba(0, 0, 0, 0.08);
 }
+div.scalarValueInlinePromptLink.form-control .btn-group {
+    display: none;
+}
+div.scalarValueInlinePromptLink.form-control:hover .btn-group {
+	display: inherit;
+}
 
 .entityUrlSource {
 	cursor: pointer;
