--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -74,6 +74,12 @@
               			<div class="btn-group btn-group-sm shadow" role="group">
 	                		<button type="button" class="btn btn-primary">
 	                			<i class="fa-solid fa-edit"></i></button>
+                			
+	                		<!-- additional buttons -->	
+            				<button wicket:id="scalarValueInlinePromptLink-buttons" 
+            					class="btn" type="button">
+							</button>
+	                			
 	             		</div>
 	            	</span>
 				</div> 
