ISIS-3006: display button-group on focused form field

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -1059,7 +1059,8 @@ span.scalarValueInput.input-group div.btn-group {
     display: none;
 }
 div.scalarValueInlinePromptLink.form-control:hover .btn-group,
-span.scalarValueInput.input-group:hover div.btn-group {
+span.scalarValueInput.input-group:hover div.btn-group,
+textarea.form-control:focus +span >.btn-group{
 	display: inherit;
 }
 
