ISIS-3006: css fix: scalarValueInlinePromptLink full width always
- consistent UI

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -71,7 +71,7 @@
 						class="no-event-prop" />
 						
 					<span class="position-absolute top-0 end-0">
-              			<div class="btn-group btn-group-sm shadow" role="group">
+              			<div class="btn-group btn-group-sm shadow-sm" role="group">
 	                		<button type="button" class="btn btn-primary">
 	                			<i class="fa-solid fa-edit"></i></button>
                 			
