ISIS-2877: css fix: fit button-group inside surrounding value input box

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -974,7 +974,10 @@ footer .footer-image {
     margin-bottom: 4px;
 }
 
-
+/* fit button-group inside surrounding value input box */
+.scalarValueInput .btn-group-sm > .btn {
+	padding: .20rem .5rem;
+}
 
 .booleanPanel .actions-right .additionalLinkListInline {
     margin-top: 0px;
