ISIS-2877: css fix: consistent link coloring

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -210,7 +210,7 @@
 		</wicket:fragment>
 		
 		<wicket:fragment wicket:id="fragment-compact-link">
-			<a wicket:id="scalarValue" class="no-click-bubbling link-primary">
+			<a wicket:id="scalarValue" class="no-click-bubbling">
 				<span wicket:id="linkLabel" />
 			</a>
 		</wicket:fragment>
