ISIS-3022: CSS: consistent button coloring
- buttons are bs-primary by default, unless they have lesser importance

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/entity/header/EntityHeaderPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/entity/header/EntityHeaderPanel.html
@@ -22,9 +22,10 @@
         <wicket:panel>
             <div class="entityHeaderPanel">
                 <h4 class="iconAndTitle">
-                    <div wicket:id="entityIconTitleAndCopylink" class="iconAndTitleLabel entityIconTitleAndCopylink">[icon and title]</div>
-                    <div class="entityActions" wicket:id="entityActions"></div>
-                    <div class="clearfix"></div>
+                    <div wicket:id="entityIconTitleAndCopylink" 
+                    	class="iconAndTitleLabel entityIconTitleAndCopylink">[icon and title]</div>
+                    <div wicket:id="entityActions"
+                    	class="entityActions"></div>
                 </h4>
             </div>
         </wicket:panel>
