--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/actionmenu/entityactions/AdditionalLinksAsListInlinePanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/actionmenu/entityactions/AdditionalLinksAsListInlinePanel.html
@@ -24,7 +24,8 @@
       lang="en">
     <body>
         <wicket:panel>
-            <ul wicket:id="additionalLinkList" class="additionalLinkList additionalLinkListInline list-unstyled list-inline">
+            <ul wicket:id="additionalLinkList"
+            	 class="additionalLinkList additionalLinkListInline list-unstyled list-inline">
                 <li wicket:id="additionalLinkItem" class="additionalLinkItem list-inline-item">
                     <a href="#" wicket:id="additionalLink" class="btn btn-sm">
                         <span wicket:id="additionalLinkTitle" class="additionalLinkItem">[link title]</span>
