--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/layout/bs/col/Col.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/layout/bs/col/Col.html
@@ -23,9 +23,9 @@
             <div wicket:id="col">
                 <div class="entityHeaderPanel" wicket:id="entityHeaderPanel">
                     <h4 class="iconAndTitle">
-                        <div wicket:id="entityIconTitleAndCopylink" class="iconAndTitleLabel entityIconTitleAndCopylink">[icon and title]</div>
+                        <div wicket:id="entityIconTitleAndCopylink" 
+                        	class="iconAndTitleLabel entityIconTitleAndCopylink">[icon and title]</div>
                         <div class="entityActions" wicket:id="entityActions"></div>
-                        <div class="clearfix"></div>
                     </h4>
                 </div>
                 <div class="actions" wicket:id="actions">
